# ai_graph_estimation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
src/: eval_v4.ipynb  train_v1.ipynb  train_v2.ipynb  train_v3.ipynb  train_v4.ipynb
src/deployment/: README.md  app.py  pyproject.toml  requirements.txt
src/model/: class_names.json  transforms_info.json
